--- a/TODO
+++ b/TODO
@@ -1,10 +1,17 @@
-Pizza TODO:
+========= Pizza TODO:
 
 When an invalid key or mouse button is hit, flash the screen or respond
 in some way.  Provide an option to turn this off, perhaps (or not).
 
-XYZ TODO:
+Show pics of different gate types along toolbar
+
+Make program full-screen, with coordinates recentered somehow
+
+========= XYZ TODO:
 
 Error handling APIs
 
 Autoupdater
+  * Make sure only to update if no error
+  * Save previous copy as backup?
+  * Send version # to web service and/or check known URL
