--- a/TODO
+++ b/TODO
@@ -5,7 +5,7 @@ in some way.  Provide an option to turn this off, perhaps (or not).
 
 Make program full-screen, with coordinates recentered somehow
 
-Break connections properly when reconnecting an already-used input or output
+Merge inputs with outputs into a single connection structure.
 
 ========= XYZ TODO:
 
