--- a/TODO
+++ b/TODO
@@ -7,6 +7,8 @@ Make program full-screen, with coordinates recentered somehow
 
 Merge inputs with outputs into a single connection structure.
 
+Propagate input signals to outputs
+
 ========= XYZ TODO:
 
 Allow Z-reordering of sprites
