Do most work toward upside-down gates

--- a/TODO
+++ b/TODO
@@ -7,7 +7,17 @@ Make program full-screen, with coordinates recentered somehow
 
 Merge inputs with outputs into a single connection structure.
 
-Propagate input signals to outputs
+Add upside-down gates
+
+Add splitters (nodes, in Robot Odyssey parlance)
+
+Add "continue propagating" flag to use with _process() function
+
+Figure out how to draw wires better
+
+Wires slowly (or quickly?) change color?
+
+Re-lay-out screen coords
 
 ========= XYZ TODO:
 
