--- a/TODO
+++ b/TODO
@@ -1,7 +1,25 @@
 ========= Pizza TODO:
 
-When an invalid key or mouse button is hit, flash the screen or respond
-in some way.  Provide an option to turn this off, perhaps (or not).
+Pizza roll animation:
+  - For each pizza type (topping combo)
+    - Adjust signal from topping detectors, change appearance of same
+    - Roll pizza on conveyor to judgement spot
+    - Pause
+    - If judged acceptable:
+      - Roll pizza to eating spot
+    - Else
+      - Open trapdoor
+      - Drop pizza
+    - If Shanna accepts judgement
+      - Smiley animation, possibly with eating
+    - Else
+      - Frowny animation, possibly with hungry
+      - Show unacceptable pizza toppings prominently
+      - Stop all pizzas from rolling
+
+Add ESC-to-fast-forward on (each?) pizza rolling
+
+Start on last problem pizza?
 
 Add splitters (nodes, in Robot Odyssey parlance)
 
