Add pause after rolling pizza out

--- a/TODO
+++ b/TODO
@@ -26,6 +26,8 @@ Figure out how to draw wires better
 
 Wires slowly (or quickly?) change color?
 
+Quit Button
+
 ==== Eventual
 
 Make program full-screen, with coordinates recentered somehow
