--- a/TODO
+++ b/TODO
@@ -1,11 +1,13 @@
 ========= Pizza TODO:
 
+Run valgrind on animations
+
 Pizza roll animation:
   * For each pizza type (topping combo)
     * Adjust signal from topping detectors
     - Change appearance of topping detectors
     * Roll pizza on conveyor to judgement spot
-    - Pause
+    * Pause
     - If judged acceptable:
       - Roll pizza to eating spot
     - Else
