--- a/TODO
+++ b/TODO
@@ -2,25 +2,13 @@
 
 Run valgrind on animations
 
-Bug with returned values - some iterations not failing properly!
+Add big Shanna for getting all pizzas judged correctly
 
-Pizza roll animation:
-  * For each pizza type (topping combo)
-    * Adjust signal from topping detectors
-    - Change appearance of topping detectors
-    * Roll pizza on conveyor to judgement spot
-    * Pause
-    - If judged acceptable:
-      - Roll pizza to eating spot
-    - Else
-      - Open trapdoor
-      - Drop pizza
-    - If Shanna accepts judgement
-      - Smiley animation, possibly with eating
-    - Else
-      - Frowny animation, possibly with hungry
-      - Show unacceptable pizza toppings prominently
-      - Stop all pizzas from rolling
+Add initial animation to show what Shanna likes or dislikes
+
+Add animation on failure to show what went wrong and remind of likes/dislikes
+
+Add level text display (temp measure until animations are better)
 
 Start on last problem pizza?
 
